force-app/main/default/objects/Plan_Team_Member__c/Plan_Team_Member__c.object-meta.xml
<CustomObject>
    <description>Layered ownership: plan lead, lane owners, SDRs, contributors. Drives plan-team-based sharing (architecture 2.6 / 8).</description>
    <label>Plan Team Member</label>
    <nameField>
        <displayFormat>PTM-{0000000}</displayFormat>
        <label>Team Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>