force-app/main/default/objects/Plan_Team_Member__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <label>Account Plan</label>
    <type>MasterDetail</type>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipName>Team_Members</relationshipName>
    <relationshipLabel>Team Members</relationshipLabel>
    <relationshipOrder>0</relationshipOrder>
</CustomField>