force-app/main/default/objects/Plan_Team_Member__c/fields/Plan_Role__c.field-meta.xml
<CustomField>
    <fullName>Plan_Role__c</fullName>
    <label>Plan Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Plan_Lead</fullName><default>false</default><label>Plan Lead</label></value>
            <value><fullName>Lane_Owner</fullName><default>false</default><label>Lane Owner</label></value>
            <value><fullName>SDR</fullName><default>false</default><label>SDR</label></value>
            <value><fullName>Contributor</fullName><default>true</default><label>Contributor</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>