force-app/main/default/objects/Plan_Team_Member__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Lane (Product Family)</label>
    <description>Which lane this member owns.</description>
    <type>Lookup</type>
    <referenceTo>Plan_Product_Family__c</referenceTo>
    <relationshipName>Team_Members</relationshipName>
    <relationshipLabel>Team Members</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>