force-app/main/default/objects/Plan_Team_Member__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Plan_Team_Memberships</relationshipName>
    <relationshipLabel>Plan Team Memberships</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>