force-app/main/default/objects/Plan_Team_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Plan_Role__c</columns>
    <columns>Product_Family__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>